--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@mui/base": "^5.0.0-alpha.112",
-    "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.3",
+    "@mui/icons-material": "^5.11.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "leaflet": "^1.9.3",
+    "leaflet-measure": "^3.1.0",
+    "leaflet-ruler": "^1.0.0",
     "material-ui-popup-state": "^5.0.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
