--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.3.1",
     "leaflet": "^1.9.3",
     "leaflet-measure": "^3.1.0",
     "leaflet-ruler": "^1.0.0",
