--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.1",
-    "leaflet": "^1.9.3",
+    "leaflet": "^1.8.0-alpha.0",
     "leaflet-measure": "^3.1.0",
     "leaflet-ruler": "^1.0.0",
     "material-ui-popup-state": "^5.0.4",
@@ -20,7 +20,9 @@
     "react-bootstrap": "^2.7.0",
     "react-calendar": "^4.0.0",
     "react-dom": "^18.2.0",
-    "react-leaflet": "^4.1.0",
+    "react-leaflet": "^4.0.2",
+    "react-leaflet-cluster": "^2.1.0",
+    "react-leaflet-markercluster": "^3.0.0-rc1",
     "react-router-dom": "^6.6.2",
     "react-scripts": "5.0.1",
     "react-transition-group": "^4.4.5",
