--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "@mui/base": "^5.0.0-alpha.112",
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.3",
+    "@mui/x-date-pickers": "^5.0.18",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.1",
+    "dayjs": "^1.11.7",
     "leaflet": "^1.8.0-alpha.0",
     "leaflet-measure": "^3.1.0",
     "leaflet-ruler": "^1.0.0",
@@ -20,6 +22,7 @@
     "react-bootstrap": "^2.7.0",
     "react-calendar": "^4.0.0",
     "react-dom": "^18.2.0",
+    "react-horizontal-scrolling-menu": "^3.2.3",
     "react-leaflet": "^4.0.2",
     "react-leaflet-cluster": "^2.1.0",
     "react-leaflet-markercluster": "^3.0.0-rc1",
