--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.1",
     "dayjs": "^1.11.7",
+    "gsap": "^3.11.4",
     "leaflet": "^1.8.0-alpha.0",
     "leaflet-measure": "^3.1.0",
     "material-ui-popup-state": "^5.0.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
     "react-calendar": "^4.0.0",
+    "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
     "react-horizontal-scrolling-menu": "^3.2.3",
     "react-leaflet": "^4.0.2",
