--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.3",
     "@mui/x-date-pickers": "^5.0.18",
+    "@mui/x-date-pickers-pro": "^6.0.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -29,6 +30,7 @@
     "react-leaflet-markercluster": "^3.0.0-rc1",
     "react-router-dom": "^6.6.2",
     "react-scripts": "5.0.1",
+    "react-simple-timefield": "^3.3.1",
     "react-transition-group": "^4.4.5",
     "web-vitals": "^2.1.4"
   },
