--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.1",
+    "crypto-browserify": "^3.12.0",
     "dayjs": "^1.11.7",
     "gsap": "^3.11.4",
     "leaflet": "^1.8.0-alpha.0",
