--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-calendar": "^4.0.0",
     "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.43.9",
     "react-horizontal-scrolling-menu": "^3.2.3",
     "react-leaflet": "^4.0.2",
     "react-leaflet-cluster": "^2.1.0",
