--- a/package.json
+++ b/package.json
@@ -25,11 +25,13 @@
     "react-calendar": "^4.0.0",
     "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
+    "react-element-popper": "^2.1.6",
     "react-hook-form": "^7.43.9",
     "react-horizontal-scrolling-menu": "^3.2.3",
     "react-leaflet": "^4.0.2",
     "react-leaflet-cluster": "^2.1.0",
     "react-leaflet-markercluster": "^3.0.0-rc1",
+    "react-multi-date-picker": "^3.3.4",
     "react-router-dom": "^6.6.2",
     "react-scripts": "5.0.1",
     "react-simple-timefield": "^3.3.1",
