--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.1",
     "crypto-browserify": "^3.12.0",
+    "date-fns": "^2.30.0",
     "dayjs": "^1.11.7",
     "gsap": "^3.11.4",
     "leaflet": "^1.8.0-alpha.0",
     "leaflet-measure": "^3.1.0",
+    "luxon": "^3.3.0",
     "material-ui-popup-state": "^5.0.4",
+    "moment": "^2.29.4",
     "path-browserify": "^1.0.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
